# byteautoui

./: .gitignore  README.md  booltox.json  diagnose_wda.sh  index.html  pyproject.toml  requirements.txt  selfIdentity.plist
backend/: main.py
byteautoui/: __main__.py  app.py  assertion.py  case.py  cli.py  cli_ios_config.py  command_proxy.py  command_types.py  common.py  constants.py  provider.py
byteautoui/driver/: appium.py  base_driver.py  harmony.py  ios.py
byteautoui/remote/: goios_wda_server.py  harmony_mjpeg.py  ios_mjpeg_stream.py  ios_screenshot_server.py  ios_tunnel_manager.py  scrcpy.py  touch_controller.py
byteautoui/router/: __init__.py  android.py  device.py  proxy.py  recording.py
byteautoui/utils/: common.py  exceptions.py  ios_config.py  usbmux.py
docs/: ios-wda-config.md  ios-wda-troubleshooting.md
static/: index.html
static-original/: index.html
static-original/assets/: index-3ba1a158.css  index-9353aa21.js
static/assets/: Device-BSs94NSE.css  Device-BWtCSODc.js  Device-BwxpIu61.css  Device-C8VqceaX.js  Device-CJfe2fCn.css  Device-COR2T70P.js  Device-CSjAcDFd.css  Device-Cc7h6ABe.css  Device-CdeP-OV-.js  Device-D-TfYQIJ.js  Device-D4vfD7eN.css  Device-D7T15hUa.js  Device-DJJ0utz0.css  Device-DYQDFew6.js  Device-DamI0Z6R.js  Device-DkdAEg9e.css  Device-Dz6DniPI.css  Device-_ezVRGf2.js  (+39 more)
tests/: test_assertion.py
uiautodev/: app.py  cli.py  command_proxy.py  command_types.py  common.py  provider.py
web/: MIGRATION_COMPLETE.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
(+61 files in other folders)
